--- a/internal/model/config.yml
+++ b/internal/model/config.yml
@@ -15,6 +15,9 @@ web_tag_type: 1 # json tag 0: Small Camel-Case 1: _
 table_prefix: "" #table prefix
 is_column_name: true # Whether to generate column names
 is_out_file_by_table_name: true # Whether to generate multiple models based on table names
+self_type_define: # Custom data type mapping
+    float: float64
+    tinyint(1): int64
 db_info :
     host : "127.0.0.1"
     port : 3306
@@ -22,5 +25,5 @@ db_info :
     password : "cx654321"
     database : "test"
     type: 0 # database type (0:mysql , 1:sqlite , 2:mssql)
-table_names: "" # Specified table generation, multiple tables with , separated
-out_file_name: "" # Custom build file name
+table_names: "t_users" # Specified table generation, multiple tables with , separated
+out_file_name: "t_users" # Custom build file name
